# accesskit-c

./: .gitignore  .release-please-manifest.json  AUTHORS  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  accesskit-config.cmake  accesskit.cmake  cbindgen.toml  deny.toml  meson.build  meson_options.txt  release-please-config.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release-please.yml
examples/sdl/: README.md  hello_world.c
examples/sdl/android/: .gitignore  gradle.properties  settings.gradle
examples/sdl/android/app/: build.gradle  proguard-rules.pro
examples/sdl/android/app/src/main/: AndroidManifest.xml
examples/sdl/android/app/src/main/java/dev/accesskit/sdl_example/: AccessKitSDLActivity.java
examples/sdl/android/app/src/main/jni/: CMakeLists.txt  android_jni.c
examples/sdl/android/app/src/main/res/values/: strings.xml
examples/sdl/android/gradle/wrapper/: gradle-wrapper.properties
examples/windows/: hello_world.c
include/: accesskit.h
meson/: cargo_wrapper.py  check-is-version-string.py  project_version.py  query-rustc.py
src/: android.rs  capture.rs  common.rs  geometry.rs  ios.rs  lib.rs  macos.rs  unix.rs  windows.rs
