[package]
name = "accesskit-c"
version = "0.13.1"
authors = ["The AccessKit contributors"]
license = "MIT OR Apache-2.0"
publish = false
edition = "2021"
rust-version = "1.75"

[lib]
name = "accesskit"
crate-type = ["cdylib", "staticlib"]
doc = false

[features]
cbindgen = []

[dependencies]
accesskit = "0.16.3"
paste = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
accesskit_windows = "0.23.2"

[target.'cfg(target_os = "macos")'.dependencies]
accesskit_macos = "0.17.3"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
accesskit_unix = "0.12.3"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
debug = true
