# Derived from the librsvg Meson build
# Copyright (c) 2024 L. E. Segovia <amy@amyspark.me>
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, see <http://www.gnu.org/licenses/>.

option('triplet',
       type: 'string',
       value: '',
       description : 'Rust target triplet (if needed)')

option('rustc-version',
       type: 'string',
       value: '',
       description: 'Installed RustC version to use (if needed; currently only supported for Windows builds)')

option('android-embedded-dex',
       type: 'boolean',
       value: false,
       description: 'Embed the classes.dex file in the library (Android only)')
